lab4/Bryceland/roscourse_ws/log/build_2026-03-18_00-58-51/python_turtle/stderr.log
  File "/home/yahboom/roscourse_ws/install/python_turtle/lib/python3.10/site-packages/python_turtle/turtlebot_client.py", line 29
    self.color_cli = self.create_client(SetColor,<fill this in>)
                                                 ^
SyntaxError: invalid syntax

